fix: left align

--- a/src/components/transactions/transactions.scss
+++ b/src/components/transactions/transactions.scss
@@ -100,7 +100,7 @@
             @include mobile-or-tablet-screen {
                 padding: 0.5rem;
                 display: flex;
-                justify-content: center;
+                justify-content: left;
                 align-items: center;
                 word-break: break-word;
                 text-align: center;
